static/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
        - name: static-site
          image: tkordic/static-site:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
