static/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-service
spec:
  selector:
    app: static-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
